2007-01-15 src/_image.cpp combine buffer_argb32() and buffer_bgra32() into
           a new method color_conv(format) - SC

2007-01-14 backend_cairo.py: update draw_arc() so that
           examples/arctest.py looks correct - SC

2007-01-12 backend_cairo.py: enable clipping. Update draw_image() so that
           examples/contour_demo.py looks correct - SC

2007-01-12 backend_cairo.py: fix draw_image() so that examples/image_demo.py
           now looks correct - SC

2007-01-11 Added Axes.xcorr and Axes.acorr to plot the cross
           correlation of x vs y or the autocorrelation of x.  pylab
           wrappers also provided.  See examples/xcorr_demo.py - JDH

2007-01-10 Added "Subplot.label_outer" method.  It will set the
           visibility of the ticklabels so that yticklabels are only
           visible in the first column and xticklabels are only
           visible in the last row - JDH

2007-01-02 Added additional kwarg documentation - JDH

2006-12-28 Improved error message for nonpositive input to log
           transform; added log kwarg to bar, barh, and hist,
           and modified bar method to behave sensibly by default
           when the ordinate has a log scale.  (This only works
           if the log scale is set before or by the call to bar,
           hence the utility of the log kwarg.) - EF

2006-12-27 backend_cairo.py: update draw_image() and _draw_mathtext() to work
           with numpy - SC

2006-12-20 Fixed xpdf dependency check, which was failing on windows.
           Removed ps2eps dependency check. - DSD

2006-12-19 Added Tim Leslie's spectral patch - JDH

2006-12-17 Added rc param 'axes.formatter.limits' to control
           the default threshold for switching to scientific
           notation. Added convenience method
           Axes.ticklabel_format() for turning scientific notation
           on or off on either or both axes. - EF

2006-12-16 Added ability to turn control scientific notation
           in ScalarFormatter - EF